Add OSM base layer support to google maps. * Create OSM LayerManagerStrategy for google maps, with expecation that it will be refactored into tile support.

--- a/examples/gmaps-baselayer/index.html
+++ b/examples/gmaps-baselayer/index.html
@@ -54,6 +54,7 @@
         <option value="GoogleSatellite">Google Satellite</option>
         <option value="GoogleTerrain">Google Terrain</option>
         <option value="GoogleHybrid">Google Hybrid</option>
+        <option value="OSM">OpenStreetMap</option>
       </select>
     </div>
     <script type="text/javascript">
