Allow tile opacity for openlayers

--- a/examples/openlayers-radar/index.html
+++ b/examples/openlayers-radar/index.html
@@ -40,6 +40,11 @@
           $radarVisibility.change(function() {
             radar[$radarVisibility.val()]();
           });
+
+          var $radarOpacity = $("#radar-opacity");
+          $radarOpacity.change(function() {
+            radar.setOpacity($radarOpacity.val());
+          });
         });
       }
     </script>
@@ -51,6 +56,22 @@
       <select id="radar-visibility">
         <option value="show" selected="selected">Show</option>
         <option value="hide">Hide</option>
+      </select>
+    </div>
+    <div>
+      <label for="radar-opacity">Opacity:</label>
+      <select id="radar-opacity">
+        <option value="1" selected="selected">100%</option>
+        <option value="0.9">90%</option>
+        <option value="0.8">80%</option>
+        <option value="0.7">70%</option>
+        <option value="0.6">60%</option>
+        <option value="0.5">50%</option>
+        <option value="0.4">40%</option>
+        <option value="0.3">30%</option>
+        <option value="0.2">20%</option>
+        <option value="0.1">10%</option>
+        <option value="0">0%</option>
       </select>
     </div>
     <script type="text/javascript">
