--- a/examples/gmaps-radaranim/index.html
+++ b/examples/gmaps-radaranim/index.html
@@ -32,13 +32,36 @@
 
           var radar = new aeris.maps.layers.AerisRadar();
           radar.setMap(map);
-          radar.animate();
+          var radarAnim = radar.animate();
+
+          var $animStart = $("#anim-start");
+          $animStart.click(function() {
+            radarAnim.start();
+            return false;
+          });
+
+          var $animPause = $("#anim-pause");
+          $animPause.click(function() {
+            radarAnim.pause();
+            return false;
+          });
+
+          var $animStop = $("#anim-stop");
+          $animStop.click(function() {
+            radarAnim.stop();
+            return false;
+          });
         });
       }
     </script>
   </head>
   <body>
     <div id="map-canvas"></div>
+    <div>
+      <a href="#" id="anim-start">Start</a> &#160;|&#160;
+      <a href="#" id="anim-pause">Pause</a> &#160;|&#160;
+      <a href="#" id="anim-stop">Stop</a>
+    </div>
     <script type="text/javascript">
       initialize();
     </script>
