--- a/examples/gmaps-multilayer/index.html
+++ b/examples/gmaps-multilayer/index.html
@@ -32,14 +32,14 @@
 
           var radar = new aeris.maps.layers.AerisRadar();
           radar.setMap(map);
-          var radarAnim = radar.animate();
 
           var satellite = new aeris.maps.layers.AerisSatellite();
           satellite.setMap(map);
-          var satAnim = satellite.animate();
 
-          radarAnim.start();
-          satAnim.start();
+          var anim = new aeris.maps.animations.AnimationSync(
+            [radar, satellite]);
+          anim.start();
+
         });
       }
     </script>
