Pause, previous, and next support for animation sync

--- a/examples/gmaps-multilayer/index.html
+++ b/examples/gmaps-multilayer/index.html
@@ -65,7 +65,7 @@
 
           var $animNext = $("#anim-next");
           $animNext.click(function() {
-            radarAnim.next();
+            anim.next();
             return false;
           });
         });
