Fix externals location for all gmaps and ol examples

--- a/examples/gmaps.html
+++ b/examples/gmaps.html
@@ -17,7 +17,7 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDxTEbJsXwGRW4zDj8fpVsenDMMQGhZhUU&sensor=false">
     </script>
     </script>
-    <script data-main="../../lib/config" src="../../externals/require.js"></script>
+    <script data-main="../lib/config" src="../externals/require.js"></script>
     <script type="text/javascript">
       var NS = 'gmaps';
       var BASE = 'GoogleRoadMap';
