--- a/examples/openlayers.html
+++ b/examples/openlayers.html
@@ -15,7 +15,7 @@
     <script type="text/javascript"
       src="http://openlayers.org/api/OpenLayers.js">
     </script>
-    <script data-main="../../lib/config" src="../../externals/require.js"></script>
+    <script data-main="../lib/config" src="../externals/require.js"></script>
     <script type="text/javascript">
       var NS = 'openlayers';
       var BASE = 'OSM';
