Initial creation of an Event and EventManager and refactoring of common patterns into the extension namespace

--- a/examples/openlayers-wxdetails/index.html
+++ b/examples/openlayers-wxdetails/index.html
@@ -33,8 +33,13 @@
             zoom: 4
           });
 
-          var wxDetails = new aeris.maps.layers.AerisWeatherDetails();
-          wxDetails.setMap(map);
+          var wxClick = new aeris.maps.events.Click();
+          wxClick.setMap(map);
+          wxClick.on('click', function(event) {
+            console.info(event);
+          });
+          /*var wxDetails = new aeris.maps.layers.AerisWeatherDetails();
+          wxDetails.setMap(map);*/
 
           var $radarVisibility = $("#radar-visibility");
           $radarVisibility.change(function() {
