--- a/examples/openlayers-wxdetails/index.html
+++ b/examples/openlayers-wxdetails/index.html
@@ -33,13 +33,11 @@
             zoom: 4
           });
 
-          var wxClick = new aeris.maps.events.Click();
+          var wxClick = new aeris.maps.events.AerisWeatherDetailsClick();
           wxClick.setMap(map);
-          wxClick.on('click', function(event) {
-            console.info(event);
+          wxClick.on('click', function(latLng, weather) {
+            console.info(latLng, weather);
           });
-          /*var wxDetails = new aeris.maps.layers.AerisWeatherDetails();
-          wxDetails.setMap(map);*/
 
           var $radarVisibility = $("#radar-visibility");
           $radarVisibility.change(function() {
