--- a/examples/gmaps-wxdetails/index.html
+++ b/examples/gmaps-wxdetails/index.html
@@ -30,8 +30,11 @@
             zoom: 4
           });
 
-          var wxDetails = new aeris.maps.layers.AerisWeatherDetails();
-          wxDetails.setMap(map);
+          var wxClick = new aeris.maps.events.Click();
+          wxClick.setMap(map);
+          wxClick.on('click', function(event) {
+            console.info(event);
+          });
 
           var $radarVisibility = $("#radar-visibility");
           $radarVisibility.change(function() {
