Allow animations to have visibility changed.

--- a/examples/gmaps.html
+++ b/examples/gmaps.html
@@ -152,11 +152,11 @@
       <h3>Base Layer</h3>
       <div>
         <select id="base-layer">
-          <option value="GoogleRoadMap">Google Street Map</option>
+          <option value="GoogleRoadMap" selected="selected">Google Street Map</option>
           <option value="GoogleSatellite">Google Satellite</option>
           <option value="GoogleTerrain">Google Terrain</option>
           <option value="GoogleHybrid">Google Hybrid</option>
-          <option value="OSM" selected="selected">OpenStreetMap</option>
+          <option value="OSM">OpenStreetMap</option>
         </select>
       </div>
 
