--- a/examples/openlayers-wxdetails/index.html
+++ b/examples/openlayers-wxdetails/index.html
@@ -18,6 +18,16 @@
     </script>
     <script data-main="../../lib/config" src="../../externals/require.js"></script>
     <script type="text/javascript">
+      var source = null;
+      var template = null;
+      $.ajax({
+        url: '../wx-details.handlebars',
+        cache: true,
+        success: function(data) {
+          source = data;
+          template = Handlebars.compile(source);
+        }
+      });
       function initialize() {
         var req = require.config({
           config: {
@@ -37,8 +47,6 @@
           var wxClick = new aeris.maps.events.AerisWeatherDetailsClick();
           wxClick.setMap(map);
           wxClick.on('click', function(latLon, weather) {
-            var source = $('#weather-details').html();
-            var template = Handlebars.compile(source);
             var html = template({
               latitude: Math.round(latLon[0] * 100) / 100,
               longitude: Math.round(latLon[1] * 100) / 100,
@@ -90,123 +98,6 @@
         <option value="0">0%</option>
       </select>
     </div>
-    <script id="weather-details" type="text/x-handlebars-template">
-      <div>
-        <div class="infowin-title">Weather </div>
-        <div class="wxdata-wrapper clearfix">
-          <div class="data">
-            <div class="wxdata-loc">{{latitude}}, {{longitude}}
-              <span class="wxdata-loc-detail">near {{place.name}}, {{place.state}}</span>
-            </div>
-            <table class="wxdata-table">
-              <tbody>
-                <tr><th colspan="2">Currently</th></tr>
-                <tr>
-                  <td class="wxcc-summary">
-                    <div class="wx">
-                      <div class="inner"><img src="http://mesh.hamweather.net/images/wxicons/{{obs.icon}}" alt=""></div>
-                    </div>
-                    <div class="temp">
-                      <div class="inner">{{obs.tempF}}&#176;</div>
-                    </div>
-                  </td>
-                  <td class="wxcc-details">
-                    <ul>
-                      <li class="odd">
-                        <div class="label">Feels Like</div>
-                        <div class="value">{{obs.feelslikeF}}&#176;</div>
-                      </li>
-                      <li class="even">
-                        <div class="label">Winds</div>
-                        <div class="value">{{obs.windDir}} {{obs.windMPH}} mph</div>
-                      </li>
-                      <li class="odd">
-                        <div class="label">Dew Point</div>
-                        <div class="value">{{obs.dewpointF}}&#176;</div>
-                      </li>
-                    </ul>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-            <table class="wxdata-table">
-              <tbody>
-                <tr><th colspan="3">Forecast</th></tr>
-                <tr>
-                  <td class="wxfcst">
-                    <div class="daydata day">{{fc1.title}}</div>
-                    <div class="wxrow">
-                      <div class="wx">
-                        <div class="inner"><img src="http://mesh.hamweather.net/images/wxicons/{{fc1.icon}}" alt="{{fc1.weather}}"></div>
-                      </div>
-                      <div class="temps">
-                        <div class="hitemp">
-                          <div class="label">Hi:</div>
-                          <div class="inner">{{fc1.maxTempF}}&#176;</div>
-                        </div>
-                        <div class="lotemp">
-                          <div class="label">Lo:</div>
-                          <div class="inner">{{fc1.minTempF}}&#176;</div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="daydata pop">
-                      <div class="label">POP*:</div>
-                      <div class="value">{{fc1.pop}}%</div>
-                    </div>
-                  </td>
-                  <td class="wxfcst">
-                    <div class="daydata day">{{fc2.title}}</div>
-                    <div class="wxrow">
-                      <div class="wx">
-                        <div class="inner"><img src="http://mesh.hamweather.net/images/wxicons/{{fc2.icon}}" alt="{{fc2.weather}}"></div>
-                      </div>
-                      <div class="temps">
-                        <div class="hitemp">
-                          <div class="label">Hi:</div>
-                          <div class="inner">{{fc2.maxTempF}}&#176;</div>
-                        </div>
-                        <div class="lotemp">
-                          <div class="label">Lo:</div>
-                          <div class="inner">{{fc2.minTempF}}&#176;</div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="daydata pop">
-                      <div class="label">POP*:</div>
-                      <div class="value">{{fc2.pop}}%</div>
-                    </div>
-                  </td>
-                  <td class="wxfcst">
-                    <div class="daydata day">{{fc3.title}}</div>
-                    <div class="wxrow">
-                      <div class="wx">
-                        <div class="inner"><img src="http://mesh.hamweather.net/images/wxicons/{{fc3.icon}}" alt="{{fc3.weather}}"></div>
-                      </div>
-                      <div class="temps">
-                        <div class="hitemp">
-                          <div class="label">Hi:</div>
-                          <div class="inner">{{fc3.maxTempF}}&#176;</div>
-                        </div>
-                        <div class="lotemp">
-                          <div class="label">Lo:</div>
-                          <div class="inner">{{fc3.minTempF}}&#176;</div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="daydata pop">
-                      <div class="label">POP*:</div>
-                      <div class="value">{{fc3.pop}}%</div>
-                    </div>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
-            <div class="wxdata-loc"><span class="wxdata-loc-detail">* POP = Probability Of Precip</span></div>
-          </div>
-        </div>
-      </div>
-    </script>
     <script type="text/javascript">
       initialize();
     </script>
