Add inner styling to the weather details infobox

--- a/examples/gmaps-wxdetails/index.html
+++ b/examples/gmaps-wxdetails/index.html
@@ -8,6 +8,7 @@
         height: 400px;
       }
     </style>
+    <link rel="stylesheet" type="text/css" href="../wx-details.css"/>
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="https://raw.github.com/wycats/handlebars.js/1.0.0-rc.4/dist/handlebars.js"></script>
     <script type="text/javascript"
