Add marker for InfoBox with Google Maps and dipslay only one InfoBox at a time

--- a/examples/gmaps-wxdetails/index.html
+++ b/examples/gmaps-wxdetails/index.html
@@ -10,7 +10,7 @@
     </style>
     <link rel="stylesheet" type="text/css" href="../wx-details.css"/>
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-    <script src="https://raw.github.com/wycats/handlebars.js/1.0.0-rc.4/dist/handlebars.js"></script>
+    <script src="../handlebars.js"></script>
     <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDxTEbJsXwGRW4zDj8fpVsenDMMQGhZhUU&sensor=false">
     </script>
@@ -31,7 +31,8 @@
           config: {
             aeris: {
               apiId: 'ezHWL0MiLsxwlN2ik8U4c',
-              apiSecret: 'uCDMeSj91lBfIKCmeQkpeZjsAwUUQJHuKesCvqTm'
+              apiSecret: 'uCDMeSj91lBfIKCmeQkpeZjsAwUUQJHuKesCvqTm',
+              path: '/'
             }
           }
         });
