--- a/examples/gmaps-convective/index.html
+++ b/examples/gmaps-convective/index.html
@@ -10,7 +10,7 @@
     </style>
     <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDxTEbJsXwGRW4zDj8fpVsenDMMQGhZhUU&sensor=false">
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDxTEbJsXwGRW4zDj8fpVsenDMMQGhZhUU&sensor=false&libraries=geometry">
     </script>
     <script data-main="../../lib/config" src="../../externals/require.js"></script>
     <script type="text/javascript">
