New way to load aeris maps config without async issue

--- a/examples/gmaps-baselayer/index.html
+++ b/examples/gmaps-baselayer/index.html
@@ -12,7 +12,7 @@
     <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDxTEbJsXwGRW4zDj8fpVsenDMMQGhZhUU&sensor=false">
     </script>
-    <script data-main="../../lib/config" src="../../externals/require.js"></script>
+    <script data-main="../initialize" src="../../externals/require.js"></script>
     <script type="text/javascript">
       function LayerRepository(aeris) {
         this.aeris = aeris;
@@ -57,8 +57,5 @@
         <option value="OSM">OpenStreetMap</option>
       </select>
     </div>
-    <script type="text/javascript">
-      initialize();
-    </script>
   </body>
 </html>
