--- a/examples/gmaps-simple/index.html
+++ b/examples/gmaps-simple/index.html
@@ -10,7 +10,7 @@
     <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDxTEbJsXwGRW4zDj8fpVsenDMMQGhZhUU&sensor=false">
     </script>
-    <script data-main="../../lib/config" src="../../externals/require.js"></script>
+    <script data-main="../initialize" src="../../externals/require.js"></script>
     <script type="text/javascript">
       function initialize() {
         require(["aeris/maps/gmaps"], function(aeris) {
@@ -25,8 +25,5 @@
   </head>
   <body>
     <div id="map-canvas" />
-    <script type="text/javascript">
-      initialize();
-    </script>
   </body>
 </html>
