--- a/examples/gmaps-wxdetails/index.html
+++ b/examples/gmaps-wxdetails/index.html
@@ -14,7 +14,7 @@
     <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDxTEbJsXwGRW4zDj8fpVsenDMMQGhZhUU&sensor=false">
     </script>
-    <script data-main="../../lib/config" src="../../externals/require.js"></script>
+    <script data-main="../initialize" src="../../externals/require.js"></script>
     <script type="text/javascript">
       var source = null;
       var template = null;
@@ -27,7 +27,7 @@
         }
       });
       function initialize() {
-        var req = require.config({
+        require.config({
           config: {
             aeris: {
               apiId: 'ezHWL0MiLsxwlN2ik8U4c',
@@ -36,7 +36,7 @@
             }
           }
         });
-        req(["aeris/maps/gmaps"], function(aeris) {
+        require(["aeris/maps/gmaps"], function(aeris) {
           var map = new aeris.maps.gmaps.Map("map-canvas", {
             baseLayer: new aeris.maps.layers.GoogleRoadMap(),
             center: [44.98, -93.2636],
@@ -97,8 +97,5 @@
         <option value="0">0%</option>
       </select>
     </div>
-    <script type="text/javascript">
-      initialize();
-    </script>
   </body>
 </html>
