--- a/examples/openlayers-baselayer/index.html
+++ b/examples/openlayers-baselayer/index.html
@@ -15,7 +15,7 @@
     <script type="text/javascript"
       src="http://openlayers.org/api/OpenLayers.js">
     </script>
-    <script data-main="../../lib/config" src="../../externals/require.js"></script>
+    <script data-main="../initialize" src="../../externals/require.js"></script>
     <script type="text/javascript">
       function LayerRepository(aeris) {
         this.aeris = aeris;
@@ -60,8 +60,5 @@
         <option value="GoogleHybrid">Google Hybrid</option>
       </select>
     </div>
-    <script type="text/javascript">
-      initialize();
-    </script>
   </body>
 </html>
