--- a/examples/openlayers-simple/index.html
+++ b/examples/openlayers-simple/index.html
@@ -13,7 +13,7 @@
     <script type="text/javascript"
       src="http://openlayers.org/api/OpenLayers.js">
     </script>
-    <script data-main="../../lib/config" src="../../externals/require.js"></script>
+    <script data-main="../initialize" src="../../externals/require.js"></script>
     <script type="text/javascript">
       function initialize() {
         require(["aeris/maps/openlayers"], function(aeris) {
@@ -28,8 +28,5 @@
   </head>
   <body>
     <div id="map-canvas" />
-    <script type="text/javascript">
-      initialize();
-    </script>
   </body>
 </html>
