--- a/examples/openlayers-wxdetails/index.html
+++ b/examples/openlayers-wxdetails/index.html
@@ -17,7 +17,7 @@
     <script type="text/javascript"
       src="http://openlayers.org/api/OpenLayers.js">
     </script>
-    <script data-main="../../lib/config" src="../../externals/require.js"></script>
+    <script data-main="../initialize" src="../../externals/require.js"></script>
     <script type="text/javascript">
       var source = null;
       var template = null;
@@ -100,8 +100,5 @@
         <option value="0">0%</option>
       </select>
     </div>
-    <script type="text/javascript">
-      initialize();
-    </script>
   </body>
 </html>
