--- a/examples/openlayers-convective/index.html
+++ b/examples/openlayers-convective/index.html
@@ -15,7 +15,7 @@
     <script type="text/javascript"
       src="http://openlayers.org/api/OpenLayers.js">
     </script>
-    <script data-main="../../lib/config" src="../../externals/require.js"></script>
+    <script data-main="../initialize" src="../../externals/require.js"></script>
     <script type="text/javascript">
       function initialize() {
         var req = require.config({
@@ -74,8 +74,5 @@
         <option value="0">0%</option>
       </select>
     </div>
-    <script type="text/javascript">
-      initialize();
-    </script>
   </body>
 </html>
