--- a/examples/openlayers.html
+++ b/examples/openlayers.html
@@ -19,7 +19,7 @@
     <script type="text/javascript"
       src="http://openlayers.org/api/OpenLayers.js">
     </script>
-    <script data-main="../lib/config" src="../externals/require.js"></script>
+    <script data-main="initialize" src="../externals/require.js"></script>
     <script type="text/javascript">
       var NS = 'openlayers';
       var BASE = 'GoogleRoadMap';
@@ -127,9 +127,6 @@
         <a href="#" id="anim-next">Next</a>
       </div>
     </div>
-    <script type="text/javascript">
-      initialize();
-    </script>
   </body>
 </html>
 
