Remove references to Polaris library

--- a/examples/appbuilder/routes.html
+++ b/examples/appbuilder/routes.html
@@ -54,10 +54,10 @@
               strokeWeight: 3
             },
             waypoint: {
-              url: 'icon_polaris_grey.png'
+              url: 'marker_grey.png'
             },
             selectedWaypoint: {
-              url: 'icon_polaris.png'
+              url: 'marker_green.png'
             }
           }
         });
