--- a/examples/appbuilder/maps.html
+++ b/examples/appbuilder/maps.html
@@ -23,9 +23,7 @@
       require([
         'mapbuilder/mapappbuilder',
         'packages/layers',
-        'packages/markers',
-        'polaris/maps/base/markercollections/dealermarkercollection',
-        'polaris/maps/base/markercollections/poimarkercollection'
+        'packages/markers'
       ], function(Builder) {
         var builder = new Builder({
           el: '#app',
